--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  firebase_core: ^1.14.0
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.14.0 # core
+  firebase_auth: ^3.3.12 # for authentication
+  cloud_firestore: ^3.1.11 # for database
+  firebase_storage: ^10.2.10 #for storage
+  flutterfire_ui: ^0.4.0 # for pre-built uis
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +66,12 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/
+    - assets/img/
+    - assets/icon/
+    - assets/anim/
+    - assets/font/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
